kubernetes/aws/autenticacao/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autenticacao-api
  namespace: ecociente
  labels:
    app: autenticacao-api
    app.kubernetes.io/name: autenticacao-api
    app.kubernetes.io/part-of: ecociente
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: autenticacao-api

  template:
    metadata:
      labels:
        app: autenticacao-api
        app.kubernetes.io/name: autenticacao-api
        app.kubernetes.io/part-of: ecociente

    spec:
      containers:
        - name: autenticacao-api
          image: ecociente/ecociente:autenticacao-1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 9801
              protocol: TCP

          startupProbe:
            tcpSocket:
              port: 9801
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            tcpSocket:
              port: 9801
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 9801
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
