kubernetes/aws/autenticacao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autenticacao-api-service
  namespace: ecociente
  labels:
    app: autenticacao-api
    app.kubernetes.io/name: autenticacao-api
    app.kubernetes.io/part-of: ecociente
spec:
  type: ClusterIP

  selector:
    app: autenticacao-api

  ports:
    - name: http
      protocol: TCP
      port: 9801
      targetPort: 9801
