kubernetes/aws/autenticacao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autenticacao-api-ingress
  namespace: ecociente
  labels:
    app: autenticacao-api
    app.kubernetes.io/name: autenticacao-api
    app.kubernetes.io/part-of: ecociente
spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autenticacao-api-service
                port:
                  number: 9801
